samples/_failures_safe/1761001975_1307b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37e2a351.c: In function ‘display_compression_results’:
./samples/SAFE/__tmp_37e2a351.c:154:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  154 |     for (size_t i
      |     ^~~
./samples/SAFE/__tmp_37e2a351.c:154:5: error: expected declaration or statement at end of input
